# methylcycle

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
methylcycle/: __init__.py
methylcycle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
methylcycle/data/models/: chromhmm_region_order.txt  chromhmm_region_order_entropy.txt  rt_mean_pca.joblib
methylcycle/models/: __init__.py  maps.py  paths.py  predict.py  preprocessing.py
methylcycle/utils/: __init__.py  entropy.py  normalization.py
tests/: test_entropy.py  test_loader.py  test_normalization.py  test_qc.py
