[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methylcycle"
version = "0.1.1"
description = "A bioinformatics library for DNA methylation analysis and modeling"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jan Elliot Gonzalez and Irene Hernando Herraez", email = "elgo3000@gmail.com" }]
keywords = ["bioinformatics", "methylation", "epigenetics", "DNA", "CpG", "RT", "ChromHMM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "joblib>=1.1",
    "tqdm>=4.60",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/JanElliotPhD/methylcycle"
Repository = "https://github.com/JanElliotPhD/methylcycle"

[tool.setuptools]
packages = ["methylcycle", "methylcycle.data", "methylcycle.models", "methylcycle.parsers", "methylcycle.utils"]

[tool.setuptools.package-data]
methylcycle = [
    "data/*.txt",
    "data/models/*.joblib",
    "data/models/*.txt",
    "data/example_datasets/README.md",
    "data/example_datasets/single_cell_mESC/*.parquet",
    "data/example_datasets/bulk_hepatocytes/*.parquet",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
