[metadata]
name = methylcycle
version = 0.1.0
description = A bioinformatics library for DNA methylation analysis and modeling
author = Jan Elliot Gonzalez and Irene Hernando Herraez
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    pandas>=1.3
    scipy>=1.7
    joblib>=1.1
    tqdm>=4.60
    pyarrow>=10.0

[options.packages.find]
include = methylcycle*

[options.package_data]
methylcycle =
    data/*.txt
    data/models/*.joblib
    data/models/*.txt
    data/example_datasets/README.md
    data/example_datasets/single_cell_mESC/*.parquet
    data/example_datasets/bulk_hepatocytes/*.parquet